Fixed operation command not showing in tool view, added prototype of new function picker

--- a/frontend/css/app.css
+++ b/frontend/css/app.css
@@ -548,3 +548,20 @@ to prevent collapsing during animation*/
 	opacity: 0;
 }
 
+.fakecode {
+	font-size: 80%;
+	/* The text color might confuse people to think that it has an error */
+	/* color: #c7254e; */
+	font-family: Menlo,Monaco,Consolas,"Courier New",monospace;
+	border: 1px solid #ccc;
+	border-radius: 4px;
+}
+
+summary {
+	cursor: pointer;
+	display: list-item;
+}
+
+details {
+	display: block;
+}
